--- a/html/cart_homework.html
+++ b/html/cart_homework.html
@@ -503,10 +503,10 @@
             html += '               <td class="g_qty">   ';
             html += '                     <p class="qty">   ';
             html += '                        <input type="text" name="qty" id="cnt3" value=' + cart.qty + ' class="input" title="상품수량입력" />   ';
-            html += '                        <input type="hidden" name="amt" value="358000" class="input" title="상품 가격" />   ';
-            html += '                        <input type="hidden" name="deliver_amt" value="3000" class="input" title="배송비" />   ';
+            html += '                        <input type="hidden" name="amt" value='+toCurrency(cart.price)+' class="input" title="상품 가격" />   ';
+            html += '                        <input type="hidden" name="deliver_amt" value='+cart.deliver_amt+' class="input" title="배송비" />   ';
             html += '                        <input type="hidden" name="goods_code" id="goods_no" value='+cart.goods_no+' class="input" title="상품코드" />   ';
-            html += '                        <input type="hidden" name="item_no" value="ABCDEFG1401201_ITEM_3" class="input" title="단품 코드" />   ';
+            html += '                        <input type="hidden" name="item_no" value='+cart.item[0].item_no+' class="input" title="단품 코드" />   ';
             html += '                        <a href="javascript:;" onclick="qtyPlus(this);" class="plus"><img src="../images/goods/btn_cnt_up.gif" width="15" height="9" alt="수량증가" /></a>   ';
             html += '                        <a href="javascript:;" onclick="qtyMinus(this);" class="minus"><img src="../images/goods/btn_cnt_down.gif" width="15" height="9" alt="수량감소" /></a>   ';
             html += '                        <a href="javascript:;" class="modi" onclick="qtyTotal(this,' + index + '),total_price(this);"><img src="../images/order/btn_cnt_mod.gif" width="46" height="18" alt="변경" /></a>   ';
@@ -590,7 +590,7 @@
                         
           }
 
-             total_price();
+           total_price();
            searchCartList();
            set_soldout();
 
